--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0 0;
   padding: 0 0;
   box-sizing: border-box;
-  font-family: "DM Sans", sans-serif;
+   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
@@ -23,6 +23,7 @@ body {
 }
 .span-item1 {
   color: hsl(256, 67%, 59%);
+  font-style: italic;
 }
 .span-item7 {
   font-weight: 500;
@@ -30,6 +31,14 @@ body {
 }
 .span-item2 {
   color: hsl(39, 100%, 71%);
+}
+.span-item3{
+  font-style: italic;
+}
+.item2 .heading {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 40px;
 }
 .grid-container {
   justify-content: center;
