--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0 0;
   padding: 0 0;
   box-sizing: border-box;
-   font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
@@ -20,6 +20,8 @@ body {
 
 .grid-item p {
   font-size: 18px;
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
 }
 .span-item1 {
   color: hsl(256, 67%, 59%);
@@ -32,7 +34,7 @@ body {
 .span-item2 {
   color: hsl(39, 100%, 71%);
 }
-.span-item3{
+.span-item3 {
   font-style: italic;
 }
 .item2 .heading {
@@ -174,8 +176,6 @@ body {
       "item6"
       "item7"
       "item8";
-   
-
   }
 
   .item8 {
